--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ aw-models = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branc
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0"
 chrono = "0.4"
+config = { version = "0.13", features = ["toml"] }
+serde = { version = "1.0", features = ["derive"] }
+dirs = "5.0"
+clap = { version = "4.4", features = ["derive"] }
+toml = "0.7"
+hostname = "0.3"
