--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,19 +13,22 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
     outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-      release_id: ${{ steps.create_release.outputs.id }}
+      upload_url: ${{ steps.get_upload_url.outputs.url }}
     steps:
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: github.ref_type == 'tag'
+        with:
+          generate_release_notes: true
+          files: |
+            dist/*
+
+      - name: Get Upload URL
+        id: get_upload_url
+        run: |
+          echo "url=$(gh api repos/${{ github.repository }}/releases/tags/${{ github.ref_name }} --jq '.upload_url')" >> $GITHUB_OUTPUT
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: true
-          prerelease: false
 
   build-linux:
     needs: create-release
@@ -49,12 +52,12 @@ jobs:
           target: ${{ matrix.target.arch }}
           override: true
 
-      - name: Install cross
-        uses: taiki-e/install-action@cross
+      - name: Install OpenSSL
+        run: sudo apt-get update && sudo apt-get install -y pkg-config libssl-dev
 
       - name: Build
         run: |
-          cross build --release --target ${{ matrix.target.arch }}
+          cargo build --release --target ${{ matrix.target.arch }}
 
       - name: Package
         run: |
@@ -63,14 +66,10 @@ jobs:
           cd -
 
       - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
+        run: |
+          gh release upload ${{ github.ref_name }} ./target/${{ matrix.target.arch }}/release/${{ env.PROJECT_NAME }}-${{ matrix.target.name }}.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./target/${{ matrix.target.arch }}/release/${{ env.PROJECT_NAME }}-${{ matrix.target.name }}.tar.gz
-          asset_name: ${{ env.PROJECT_NAME }}-${{ matrix.target.name }}.tar.gz
-          asset_content_type: application/gzip
 
   build-macos:
     needs: create-release
@@ -141,24 +140,16 @@ jobs:
           tar -czf ${{ env.PROJECT_NAME }}-${{ matrix.target.name }}.tar.gz ${{ env.PROJECT_NAME }}.app
 
       - name: Upload DMG Release Asset
-        uses: actions/upload-release-asset@v1
+        run: |
+          gh release upload ${{ github.ref_name }} ./${{ env.PROJECT_NAME }}-${{ matrix.target.name }}.dmg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./${{ env.PROJECT_NAME }}-${{ matrix.target.name }}.dmg
-          asset_name: ${{ env.PROJECT_NAME }}-${{ matrix.target.name }}.dmg
-          asset_content_type: application/x-apple-diskimage
 
       - name: Upload App Release Asset
-        uses: actions/upload-release-asset@v1
+        run: |
+          gh release upload ${{ github.ref_name }} ./${{ env.PROJECT_NAME }}-${{ matrix.target.name }}.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./${{ env.PROJECT_NAME }}-${{ matrix.target.name }}.tar.gz
-          asset_name: ${{ env.PROJECT_NAME }}-${{ matrix.target.name }}-app.tar.gz
-          asset_content_type: application/gzip
 
   build-windows:
     needs: create-release
@@ -193,11 +184,7 @@ jobs:
           cd -
 
       - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
+        run: |
+          gh release upload ${{ github.ref_name }} ./target/${{ matrix.target.arch }}/release/${{ env.PROJECT_NAME }}-${{ matrix.target.name }}.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./target/${{ matrix.target.arch }}/release/${{ env.PROJECT_NAME }}-${{ matrix.target.name }}.zip
-          asset_name: ${{ env.PROJECT_NAME }}-${{ matrix.target.name }}.zip
-          asset_content_type: application/zip
